Modified httpd.conf error on ServerRoot; forgot trailing slash.

--- a/src/main/javaserver/conf/httpd.conf
+++ b/src/main/javaserver/conf/httpd.conf
@@ -1,4 +1,4 @@
-ServerRoot "C:\Users\jimmy\Documents\Programming Development\java-web-server\src\main\javaserver"
+ServerRoot "C:\Users\jimmy\Documents\Programming Development\java-web-server\src\main\javaserver\"
 DocumentRoot "C:\Users\jimmy\Documents\Programming Development\java-web-server\src\public_html\"
 Listen 8096
 LogFile "C:\Users\jimmy\Documents\Programming Development\java-web-server\src\main\javaserver\logs\log.txt"
