--- a/src/main/javaserver/conf/httpd.conf
+++ b/src/main/javaserver/conf/httpd.conf
@@ -1,7 +1,8 @@
-ServerRoot "C:\Users\jimmy\Documents\Programming Development\java-web-server\src\main\javaserver\"
-DocumentRoot "C:\Users\jimmy\Documents\Programming Development\java-web-server\src\public_html\"
+ServerRoot "C:/Users/jimmy/Documents/Programming Development/java-web-server/src/main/javaserver/"
+DocumentRoot "C:/Users/jimmy/Documents/Programming Development/java-web-server/src/public_html/"
 Listen 8096
-LogFile "C:\Users\jimmy\Documents\Programming Development\java-web-server\src\main\javaserver\logs\log.txt"
-ScriptAlias /cgi-bin/ "C:\Users\jimmy\Documents\Programming Development\java-web-server\src\public_html\cgi-bin\"
-Alias /ab/ "C:\Users\jimmy\Documents\Programming Development\java-web-server\src\public_html\ab1\ab2\"
-Alias /~traciely/ "C:\Users\jimmy\Documents\Programming Development\java-web-server\src\public_html\"
+LogFile "C:/Users/jimmy/Documents/Programming Development/java-web-server/src/main/javaserver/logs/log.txt"
+ScriptAlias /cgi-bin/ "C:/Users/jimmy/Documents/Programming Development/java-web-server/src/public_html/cgi-bin/"
+Alias /ab/ "C:/Users/jimmy/Documents/Programming Development/java-web-server/src/public_html/ab1/ab2/"
+Alias /~traciely/ "C:/Users/jimmy/Documents/Programming Development/java-web-server/src/public_html/"
+DirectoryIndex index.htm index.php index.html
