For .htaccess for /javaserver/conf and /javaserver/public_html, set the AuthUserFile to the appropriate .htpasswd file.

--- a/src/main/javaserver/conf/.htaccess
+++ b/src/main/javaserver/conf/.htaccess
@@ -1,4 +1,4 @@
-AuthUserFile "/Users/jrob/workspace/server/public_html/.htpasswd"
+AuthUserFile "C:/Users/jimmy/Documents/Programming Development/java-web-server/src/main/javaserver/conf/.htpasswd"
 AuthType Basic
 AuthName "I Challenge You"
 Require valid-user
