--- a/src/public_html/.htaccess
+++ b/src/public_html/.htaccess
@@ -1,4 +1,4 @@
-AuthUserFile "/Users/jrob/workspace/server/.htpasswd"
+AuthUserFile "C:/Users/jimmy/Documents/Programming Development/java-web-server/src/public_html/.htpasswd"
 AuthType Basic
 AuthName "I Challenge You"
 Require valid-user
